# CassettePlayer

./: .gitignore  AppInfo.h.in  CMakeLists.txt  geometry.hgcal.txt  old.geometry.txt  readme.org
devnotes/: devnotes.org
presentations/pilot/: main.org
src/: AppInfo.h  CMakeLists.txt  app.cpp  app.h  casdm.cpp  casdm.h
src/config/: CMakeLists.txt  config.cpp
src/config/include/config/: config.h
src/core/: CMakeLists.txt  instruction.cpp  main.cpp  operation.cpp  slots.cpp
src/core/include/core/: instruction.h  operation.h  slots.h
src/geometry/: CMakeLists.txt  geometry.cpp
src/geometry/include/geometry/: geometry.h
src/geometry/include/vmath/: vmath.h
src/gui/: CMakeLists.txt  common.h  instructdv.cpp  instructdv.h  instruction_frame.cpp  instruction_frame.h  oppanel.cpp  oppanel.h  oprecord.cpp  oprecord.h  visframe.cpp  visframe.h
src/visualization/: CMakeLists.txt  color.cpp  drawables.cpp  visualization.cpp
src/visualization/include/visualization/: color.h  drawables.h  visualization.h
testground/json_comps/: archs.json  comps.json  main.cpp
tools/: CMakeLists.txt  common.cpp  common.h  instruct.cpp  item_point.cpp
tools/pathmaker/: CMakeLists.txt  pathmaker.cpp
